# bpy-lattice

./: .gitattributes  .gitignore  MANIFEST.in  README.md  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/actions/conda-setup/: action.yml
.github/workflows/: gh-pages.yml  lint.yml  pypi-upload.yml  pypi_upload.yml  tests.yaml
bpy_lattice/: _version.py  camera.py  constants.py  element.py  elements.py  lattice.py  materials.py  mesh.py  orbit.py  pipe.py  slicer.py  types.py
bpy_lattice/interfaces/: bmad.py
bpy_lattice/tests/: test_element.py  test_import.py  test_lattice.py
docs/: index.md  test.ipynb
docs/examples/: bmad_interface_example.ipynb  test.ipynb
examples/bmad/: README.md  README.txt  bmad_to_blender.in  lat.bmad  lat.layout_table
scripts/: install_blender_package.sh  make_lattice.py
