[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=60",
  "setuptools_scm[toml]>=8.0"
]

[project]
authors = [
  {name="Christopher Mayes"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=2",
  "bpy",
]
description = "Tools for creating particle accelerator models in Blender"
dynamic = [ "version" ]
keywords = []
name = "bpy-lattice"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/ChristopherMayes/bpy-lattice"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = ["."]
include = [ "bpy_lattice*", ]
namespaces = false

[project.license]
file = "LICENSE"

[tool.ruff]
# select = []
# ignore = []

[tool.setuptools_scm]
version_file = "bpy_lattice/_version.py"
